# mycercle

./: README.md
cercle/: CMakeLists.txt  input.xml  main.cpp
cercle/cpp_dir/: graphica.cpp  logica.cpp  readfile.cpp
cercle/header/: circle.hpp
